--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body class="bg-gray-50 font-sans antialiased">
   <header class="text-center py-8 bg-white shadow">
-    <img src="logo.png" alt="MKMK Logo" class="mx-auto w-32 h-auto" />
-    <h1 class="text-2xl font-semibold mt-4">Simulador de Examen de Ciudadanía Americana</h1>
-  </header>
+  <h1 class="text-4xl font-extrabold tracking-wide" style="color:#001b48;">
+    MKMK
+  </h1>
+  <p class="text-xl font-medium mt-2 text-gray-700">
+    Simulador de Examen de Ciudadanía Americana
+  </p>
+</header>
+
   <main id="app" class="max-w-4xl mx-auto p-6"></main>
   <footer class="text-center mt-12 text-sm text-gray-600">
     <p class="mb-2">
@@ -1147,5 +1152,30 @@
 
     document.addEventListener('DOMContentLoaded', initQuiz);
   </script>
+<footer class="text-center mt-12 text-sm text-gray-600">
+  <p class="mb-2">
+    © 2025 MKMK&nbsp;•&nbsp;mail:
+    <a href="mailto:mkmkmultiservice@gmail.com" class="underline">
+      mkmkmultiservice@gmail.com
+    </a>
+    &nbsp;•&nbsp;Tel:
+    <a href="tel:+19543037477" class="underline">
+      (954)&nbsp;303&nbsp;74&nbsp;77
+    </a>
+  </p>
+
+  <p>
+    Síguenos:
+    <a href="https://www.facebook.com/mkmkmultiservice" class="underline">Facebook</a>
+    &nbsp;|&nbsp;
+    <a href="https://www.instagram.com/mkmkmultiservice/" class="underline">Instagram</a>
+  </p>
+
+  <p class="mt-4 font-medium">
+    ¡Gracias por estudiar con nosotros y confiar en tu futuro!
+  </p>
+</footer>
+
 </body>
 </html>
+
