Add logo image to header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body class="bg-gray-50 font-sans antialiased">
   <header class="text-center py-8 bg-white shadow">
-  <h1 class="text-4xl font-extrabold tracking-wide" style="color:#001b48;">
-    MKMK
+  <img src="logo.png" alt="MKMK Logo"
+     class="mx-auto w-40 h-auto" />
+
   </h1>
   <p class="text-xl font-medium mt-2 text-gray-700">
     Simulador de Examen de Ciudadanía Americana
@@ -1209,6 +1210,7 @@ sectionContainer.appendChild(summaryList);
 
 </body>
 </html>
+
 
 
 
